<resources>
    <string name="app_name">appFingerDancer</string>


        <string name="btnPlay">Play</string>
        <string name="btnHighScore">High Score</string>
        <string name="btnSettings">Settings</string>
        <string name="btnAddTrack">Add Tracks</string>
        <string name="backtoMenu">Menu</string>
        <!-- Strings for SettingsMenu -->
        <string name="textviewMute">MuteSound </string>
        <string name="rbtnMuteSound"> Mute Sound</string>
        <string name="btnChangeTrack"> Change Track</string>
        <string name="btnInstructions"> Instructions </string>

        <!-- Strings for Login -->
        <string name="hintUsername">Enter Username</string>
        <string name="hintPassword">Enter Password</string>
        <string name="hintEmail">Enter Email Address</string>
        <string name="btnLogin">Login</string>
        <string name="lblUsername">User Name </string>
        <string name="txtUsername"> Enter Username</string>
        <string name="lblPassword"> Password</string>
        <string name="txtPassword"> Enter Password </string>
        <string name="btnCreateAccount"> Create Account </string>
        <string name="btnSignin">Sign In </string>
        <string name="btnSignup"> Sign Up </string>



</resources>
