<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPlay"
        android:text="@string/btnPlay"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/menubuttons"

        android:textColor="@color/colorPrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <Button
        android:id="@+id/btnHighScore"
        android:text="@string/btnHighScore"
        android:textSize="20sp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="83dp"
        android:background="@drawable/menubuttons"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/menubuttons"
        android:text="@string/btnSettings"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnAddTrack"
        android:text="@string/btnAddTrack"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/menubuttons"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSettings" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"

        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/blueStartColor"
                android:text="@string/btnSignin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.337"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/blueStartColor"
                android:text="@string/btnSignup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnLogin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091" />


        </LinearLayout>


        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/hintUsername"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="187dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"/>


        <Button
            android:id="@+id/btnCreateUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/blueStartColor"
            android:gravity="center"
            android:text="@string/btnCreateAccount" />

        <Button
            android:id="@+id/btnLoginUser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/blueStartColor"
            android:gravity="center"
            android:text="@string/btnLogin" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>